--- a/src/patternfly/components/FormControl/themes/dark/form-control.scss
+++ b/src/patternfly/components/FormControl/themes/dark/form-control.scss
@@ -18,7 +18,7 @@
       filter: #{"invert(1)"};
     }
 
-    &[readonly] {
+    &.pf-m-readonly {
       border-bottom-color: var(--#{$pf-global}--palette--black-700); // should be a var?
     }
   }
