--- a/src/patternfly/components/Badge/themes/dark/badge.scss
+++ b/src/patternfly/components/Badge/themes/dark/badge.scss
@@ -1,6 +1,6 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-theme-dark-badge() {
+@mixin pf-v5-theme-dark-badge() {
   .#{$badge} {
     --#{$badge}--m-read--BackgroundColor: var(--#{$pf-global}--palette--black-500);
     --#{$badge}--m-unread--Color: var(--#{$pf-global}--primary-color--400);
