--- a/src/patternfly/components/DragDrop/themes/dark/drag-drop.scss
+++ b/src/patternfly/components/DragDrop/themes/dark/drag-drop.scss
@@ -1,7 +1,7 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-theme-dark-drag-drop() {
-  .pf-c-droppable {
-    --pf-c-droppable--m-dragging--before--Opacity: .2;
+@mixin pf-v5-theme-dark-drag-drop() {
+  .#{$droppable} {
+    --#{$droppable}--m-dragging--before--Opacity: .2;
   }
 }
