--- a/src/patternfly/components/DualListSelector/themes/dark/dual-list-selector.scss
+++ b/src/patternfly/components/DualListSelector/themes/dark/dual-list-selector.scss
@@ -1,9 +1,9 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-theme-dark-dual-list-selector() {
-  .pf-c-dual-list-selector {
-    --pf-c-dual-list-selector__list-item-row--hover--BackgroundColor: var(--pf-global--BackgroundColor--400);
-    --pf-c-dual-list-selector__list-item-row--focus-within--BackgroundColor: var(--pf-global--BackgroundColor--400);
-    --pf-c-dual-list-selector__list-item-row--m-selected--BackgroundColor: var(--pf-global--BackgroundColor--400);
+@mixin pf-v5-theme-dark-dual-list-selector() {
+  .#{$dual-list-selector} {
+    --#{$dual-list-selector}__list-item-row--hover--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
+    --#{$dual-list-selector}__list-item-row--focus-within--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
+    --#{$dual-list-selector}__list-item-row--m-selected--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
   }
 }
