--- a/src/patternfly/components/TextInputGroup/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/text-input-group.scss
@@ -192,6 +192,6 @@
 // stylelint-disable no-invalid-position-at-import-rule
 @import "themes/dark/text-input-group";
 
-@include pf-theme-dark {
-  @include pf-theme-dark-text-input-group;
+@include pf-v5-theme-dark {
+  @include pf-v5-theme-dark-text-input-group;
 }
