--- a/src/patternfly/components/TextInputGroup/themes/dark/text-input-group.scss
+++ b/src/patternfly/components/TextInputGroup/themes/dark/text-input-group.scss
@@ -1,11 +1,11 @@
 @import "../../../../sass-utilities/themes/dark/all";
 
-@mixin pf-theme-dark-text-input-group() {
-  .pf-c-text-input-group {
-    --pf-c-text-input-group--BackgroundColor: var(--pf-global--BackgroundColor--400);
-    --pf-c-text-input-group--m-disabled--Color: var(--pf-global--disabled-color--300);
-    --pf-c-text-input-group--m-disabled--BackgroundColor: var(--pf-global--disabled-color--200);
-    --pf-c-text-input-group__text--before--BorderWidth: 0;
-    --pf-c-text-input-group__text--after--BorderBottomColor: var(--pf-global--BorderColor--400);
+@mixin pf-v5-theme-dark-text-input-group() {
+  .#{$text-input-group} {
+    --#{$text-input-group}--BackgroundColor: var(--#{$pf-global}--BackgroundColor--400);
+    --#{$text-input-group}--m-disabled--Color: var(--#{$pf-global}--disabled-color--300);
+    --#{$text-input-group}--m-disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--200);
+    --#{$text-input-group}__text--before--BorderWidth: 0;
+    --#{$text-input-group}__text--after--BorderBottomColor: var(--#{$pf-global}--BorderColor--400);
   }
 }
